gofrontend/newtranslator/antlrgenerated/GoParser.py
# Generated from GoParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys

from .GoParserBase import GoParserBase



class GoParser ( GoParserBase ):

    grammarFileName = "GoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'break'", u"'default'", u"'func'", 
                     u"'interface'", u"'select'", u"'case'", u"'defer'", 
                     u"'go'", u"'map'", u"'struct'", u"'chan'", u"'else'", 
                     u"'goto'", u"'package'", u"'switch'", u"'const'", u"'fallthrough'", 
                     u"'if'", u"'range'", u"'type'", u"'continue'", u"'for'", 
                     u"'import'", u"'return'", u"'var'", u"'nil'", u"<INVALID>", 
                     u"'('", u"')'", u"'{'", u"'}'", u"'['", u"']'", u"'='", 
                     u"','", u"';'", u"':'", u"'.'", u"'++'", u"'--'", u"':='", 
                     u"'...'", u"'||'", u"'&&'", u"'=='", u"'!='", u"'<'", 
                     u"'<='", u"'>'", u"'>='", u"'|'", u"'/'", u"'%'", u"'<<'", 
                     u"'>>'", u"'&^'", u"'!'", u"'+'", u"'-'", u"'^'", u"'*'", 
                     u"'&'", u"'<-'" ]

    symbolicNames = [ u"<INVALID>", u"BREAK", u"DEFAULT", u"FUNC", u"INTERFACE", 
                      u"SELECT", u"CASE", u"DEFER", u"GO", u"MAP", u"STRUCT", 
                      u"CHAN", u"ELSE", u"GOTO", u"PACKAGE", u"SWITCH", 
                      u"CONST", u"FALLTHROUGH", u"IF", u"RANGE", u"TYPE", 
                      u"CONTINUE", u"FOR", u"IMPORT", u"RETURN", u"VAR", 
                      u"NIL_LIT", u"IDENTIFIER", u"L_PAREN", u"R_PAREN", 
                      u"L_CURLY", u"R_CURLY", u"L_BRACKET", u"R_BRACKET", 
                      u"ASSIGN", u"COMMA", u"SEMI", u"COLON", u"DOT", u"PLUS_PLUS", 
                      u"MINUS_MINUS", u"DECLARE_ASSIGN", u"ELLIPSIS", u"LOGICAL_OR", 
                      u"LOGICAL_AND", u"EQUALS", u"NOT_EQUALS", u"LESS", 
                      u"LESS_OR_EQUALS", u"GREATER", u"GREATER_OR_EQUALS", 
                      u"OR", u"DIV", u"MOD", u"LSHIFT", u"RSHIFT", u"BIT_CLEAR", 
                      u"EXCLAMATION", u"PLUS", u"MINUS", u"CARET", u"STAR", 
                      u"AMPERSAND", u"RECEIVE", u"DECIMAL_LIT", u"OCTAL_LIT", 
                      u"HEX_LIT", u"FLOAT_LIT", u"IMAGINARY_LIT", u"RUNE_LIT", 
                      u"RAW_STRING_LIT", u"INTERPRETED_STRING_LIT", u"WS", 
                      u"COMMENT", u"TERMINATOR", u"LINE_COMMENT" ]

    RULE_sourceFile = 0
    RULE_packageClause = 1
    RULE_importDecl = 2
    RULE_importSpec = 3
    RULE_importPath = 4
    RULE_declaration = 5
    RULE_constDecl = 6
    RULE_constSpec = 7
    RULE_identifierList = 8
    RULE_expressionList = 9
    RULE_typeDecl = 10
    RULE_typeSpec = 11
    RULE_functionDecl = 12
    RULE_methodDecl = 13
    RULE_receiver = 14
    RULE_varDecl = 15
    RULE_varSpec = 16
    RULE_block = 17
    RULE_statementList = 18
    RULE_statement = 19
    RULE_simpleStmt = 20
    RULE_expressionStmt = 21
    RULE_sendStmt = 22
    RULE_incDecStmt = 23
    RULE_assignment = 24
    RULE_assign_op = 25
    RULE_shortVarDecl = 26
    RULE_emptyStmt = 27
    RULE_labeledStmt = 28
    RULE_returnStmt = 29
    RULE_breakStmt = 30
    RULE_continueStmt = 31
    RULE_gotoStmt = 32
    RULE_fallthroughStmt = 33
    RULE_deferStmt = 34
    RULE_ifStmt = 35
    RULE_switchStmt = 36
    RULE_exprSwitchStmt = 37
    RULE_exprCaseClause = 38
    RULE_exprSwitchCase = 39
    RULE_typeSwitchStmt = 40
    RULE_typeSwitchGuard = 41
    RULE_typeCaseClause = 42
    RULE_typeSwitchCase = 43
    RULE_typeList = 44
    RULE_selectStmt = 45
    RULE_commClause = 46
    RULE_commCase = 47
    RULE_recvStmt = 48
    RULE_forStmt = 49
    RULE_forClause = 50
    RULE_rangeClause = 51
    RULE_goStmt = 52
    RULE_type_ = 53
    RULE_typeName = 54
    RULE_typeLit = 55
    RULE_arrayType = 56
    RULE_arrayLength = 57
    RULE_elementType = 58
    RULE_pointerType = 59
    RULE_interfaceType = 60
    RULE_sliceType = 61
    RULE_mapType = 62
    RULE_channelType = 63
    RULE_methodSpec = 64
    RULE_functionType = 65
    RULE_signature = 66
    RULE_result = 67
    RULE_parameters = 68
    RULE_parameterDecl = 69
    RULE_expression = 70
    RULE_primaryExpr = 71
    RULE_unaryExpr = 72
    RULE_conversion = 73
    RULE_operand = 74
    RULE_literal = 75
    RULE_basicLit = 76
    RULE_integer = 77
    RULE_operandName = 78
    RULE_qualifiedIdent = 79
    RULE_compositeLit = 80
    RULE_literalType = 81
    RULE_literalValue = 82
    RULE_elementList = 83
    RULE_keyedElement = 84
    RULE_key = 85
    RULE_element = 86
    RULE_structType = 87
    RULE_fieldDecl = 88
    RULE_string_ = 89
    RULE_anonymousField = 90
    RULE_functionLit = 91
    RULE_index = 92
    RULE_goslice = 93
    RULE_typeAssertion = 94
    RULE_arguments = 95
    RULE_methodExpr = 96
    RULE_receiverType = 97
    RULE_eos = 98

    ruleNames =  [ u"sourceFile", u"packageClause", u"importDecl", u"importSpec", 
                   u"importPath", u"declaration", u"constDecl", u"constSpec", 
                   u"identifierList", u"expressionList", u"typeDecl", u"typeSpec", 
                   u"functionDecl", u"methodDecl", u"receiver", u"varDecl", 
                   u"varSpec", u"block", u"statementList", u"statement", 
                   u"simpleStmt", u"expressionStmt", u"sendStmt", u"incDecStmt", 
                   u"assignment", u"assign_op", u"shortVarDecl", u"emptyStmt", 
                   u"labeledStmt", u"returnStmt", u"breakStmt", u"continueStmt", 
                   u"gotoStmt", u"fallthroughStmt", u"deferStmt", u"ifStmt", 
                   u"switchStmt", u"exprSwitchStmt", u"exprCaseClause", 
                   u"exprSwitchCase", u"typeSwitchStmt", u"typeSwitchGuard", 
                   u"typeCaseClause", u"typeSwitchCase", u"typeList", u"selectStmt", 
                   u"commClause", u"commCase", u"recvStmt", u"forStmt", 
                   u"forClause", u"rangeClause", u"goStmt", u"type_", u"typeName", 
                   u"typeLit", u"arrayType", u"arrayLength", u"elementType", 
                   u"pointerType", u"interfaceType", u"sliceType", u"mapType", 
                   u"channelType", u"methodSpec", u"functionType", u"signature", 
                   u"result", u"parameters", u"parameterDecl", u"expression", 
                   u"primaryExpr", u"unaryExpr", u"conversion", u"operand", 
                   u"literal", u"basicLit", u"integer", u"operandName", 
                   u"qualifiedIdent", u"compositeLit", u"literalType", u"literalValue", 
                   u"elementList", u"keyedElement", u"key", u"element", 
                   u"structType", u"fieldDecl", u"string_", u"anonymousField", 
                   u"functionLit", u"index", u"goslice", u"typeAssertion", 
                   u"arguments", u"methodExpr", u"receiverType", u"eos" ]

    EOF = Token.EOF
    BREAK=1
    DEFAULT=2
    FUNC=3
    INTERFACE=4
    SELECT=5
    CASE=6
    DEFER=7
    GO=8
    MAP=9
    STRUCT=10
    CHAN=11
    ELSE=12
    GOTO=13
    PACKAGE=14
    SWITCH=15
    CONST=16
    FALLTHROUGH=17
    IF=18
    RANGE=19
    TYPE=20
    CONTINUE=21
    FOR=22
    IMPORT=23
    RETURN=24
    VAR=25
    NIL_LIT=26
    IDENTIFIER=27
    L_PAREN=28
    R_PAREN=29
    L_CURLY=30
    R_CURLY=31
    L_BRACKET=32
    R_BRACKET=33
    ASSIGN=34
    COMMA=35
    SEMI=36
    COLON=37
    DOT=38
    PLUS_PLUS=39
    MINUS_MINUS=40
    DECLARE_ASSIGN=41
    ELLIPSIS=42
    LOGICAL_OR=43
    LOGICAL_AND=44
    EQUALS=45
    NOT_EQUALS=46
    LESS=47
    LESS_OR_EQUALS=48
    GREATER=49
    GREATER_OR_EQUALS=50
    OR=51
    DIV=52
    MOD=53
    LSHIFT=54
    RSHIFT=55
    BIT_CLEAR=56
    EXCLAMATION=57
    PLUS=58
    MINUS=59
    CARET=60
    STAR=61
    AMPERSAND=62
    RECEIVE=63
    DECIMAL_LIT=64
    OCTAL_LIT=65
    HEX_LIT=66
    FLOAT_LIT=67
    IMAGINARY_LIT=68
    RUNE_LIT=69
    RAW_STRING_LIT=70
    INTERPRETED_STRING_LIT=71
    WS=72
    COMMENT=73
    TERMINATOR=74
    LINE_COMMENT=75

    def __init__(self, input, output=sys.stdout):
        super(GoParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SourceFileContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GoParser.SourceFileContext, self).__init__(parent, invokingState)
            self.parser = parser

        def packageClause(self):
            return self.getTypedRuleContext(GoParser.PackageClauseContext,0)


        def eos(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.EosContext)
            else:
                return self.getTypedRuleContext(GoParser.EosContext,i)


        def importDecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.ImportDeclContext,i)


        def functionDecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.FunctionDeclContext,i)


        def methodDecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.MethodDeclContext,i)


        def declaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(GoParser.DeclarationContext,i)


        def getRuleIndex(self):
            return GoParser.RULE_sourceFile

        def enterRule(self, listener):
            if hasattr(listener, "enterSourceFile"):
                listener.enterSourceFile(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSourceFile"):
                listener.exitSourceFile(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSourceFile"):
                return visitor.visitSourceFile(self)
            else:
                return visitor.visitChildren(self)




    def sourceFile(self):

        localctx = GoParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.packageClause()
            self.state = 199
            self.eos()
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GoParser.IMPORT:
                self.state = 200
                self.importDecl()
                self.state = 201
                self.eos()
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 217
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GoParser.FUNC) | (1 << GoParser.CONST) | (1 << GoParser.TYPE) | (1 << GoParser.VAR))) != 0):
                self.state = 211
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 208
                    self.functionDecl()
                    pass

                elif la_ == 2:
                    self.state = 209
                    self.methodDecl()
                    pass

                elif la_ == 3:
                    self.state = 210
                    self.declaration()
                    pass


                self.state = 213
                self.eos()
                self.state = 219
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PackageClauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GoParser.PackageClauseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GoParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GoParser.RULE_packageClause

        def enterRule(self, listener):
            if hasattr(listener, "enterPackageClause"):
                listener.enterPackageClause(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPackageClause"):
                listener.exitPackageClause(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPackageClause"):
                return visitor.visitPackageClause(self)
            else:
                return visitor.visitChildren(self)




    def packageClause(self):

        localctx = GoParser.PackageClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.match(GoParser.PACKAGE)
            self.state = 221
            self.match(GoParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportDeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GoParser.ImportDeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def importSpec(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ImportSpecContext)
            else:
                return self.getTypedRuleContext(GoParser.ImportSpecContext,i)


        def eos(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.EosContext)
            else:
                return self.getTypedRuleContext(GoParser.EosContext,i)


        def getRuleIndex(self):
            return GoParser.RULE_importDecl

        def enterRule(self, listener):
            if hasattr(listener, "enterImportDecl"):
                listener.enterImportDecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImportDecl"):
                listener.exitImportDecl(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitImportDecl"):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = GoParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self.match(GoParser.IMPORT)
            self.state = 235
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GoParser.IDENTIFIER, GoParser.DOT, GoParser.RAW_STRING_LIT, GoParser.INTERPRETED_STRING_LIT]:
                self.state = 224
                self.importSpec()
                pass
            elif token in [GoParser.L_PAREN]:
                self.state = 225
                self.match(GoParser.L_PAREN)
                self.state = 231
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 27)) & ~0x3f) == 0 and ((1 << (_la - 27)) & ((1 << (GoParser.IDENTIFIER - 27)) | (1 << (GoParser.DOT - 27)) | (1 << (GoParser.RAW_STRING_LIT - 27)) | (1 << (GoParser.INTERPRETED_STRING_LIT - 27)))) != 0):
                    self.state = 226
                    self.importSpec()
                    self.state = 227
                    self.eos()
                    self.state = 233
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 234
                self.match(GoParser.R_PAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportSpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GoParser.ImportSpecContext, self).__init__(parent, invokingState)
            self.parser = parser

        def importPath(self):
            return self.getTypedRuleContext(GoParser.ImportPathContext,0)


        def IDENTIFIER(self):
            return self.getToken(GoParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GoParser.RULE_importSpec

        def enterRule(self, listener):
            if hasattr(listener, "enterImportSpec"):
                listener.enterImportSpec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImportSpec"):
                listener.exitImportSpec(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitImportSpec"):
                return visitor.visitImportSpec(self)
            else:
                return visitor.visitChildren(self)




    def importSpec(self):

        localctx = GoParser.ImportSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 238
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GoParser.IDENTIFIER or _la==GoParser.DOT:
                self.state = 237
                _la = self._input.LA(1)
                if not(_la==GoParser.IDENTIFIER or _la==GoParser.DOT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 240
            self.importPath()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportPathContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GoParser.ImportPathContext, self).__init__(parent, invokingState)
            self.parser = parser

        def string_(self):
            return self.getTypedRuleContext(GoParser.String_Context,0)


        def getRuleIndex(self):
            return GoParser.RULE_importPath

        def enterRule(self, listener):
            if hasattr(listener, "enterImportPath"):
                listener.enterImportPath(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImportPath"):
                listener.exitImportPath(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitImportPath"):
                return visitor.visitImportPath(self)
            else:
                return visitor.visitChildren(self)




    def importPath(self):

        localctx = GoParser.ImportPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importPath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 242
            self.string_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GoParser.DeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def constDecl(self):
            return self.getTypedRuleContext(GoParser.ConstDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(GoParser.TypeDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(GoParser.VarDeclContext,0)


        def getRuleIndex(self):
            return GoParser.RULE_declaration

        def enterRule(self, listener):
            if hasattr(listener, "enterDeclaration"):
                listener.enterDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDeclaration"):
                listener.exitDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDeclaration"):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = GoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        try:
            self.state = 247
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GoParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 244
                self.constDecl()
                pass
            elif token in [GoParser.TYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 245
                self.typeDecl()
                pass
            elif token in [GoParser.VAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 246
                self.varDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstDeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GoParser.ConstDeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def constSpec(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ConstSpecContext)
            else:
                return self.getTypedRuleContext(GoParser.ConstSpecContext,i)

